# ChangeLog for gnome-extra/gnome-screensaver
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-screensaver/ChangeLog,v 1.96 2009/04/27 14:25:46 jer Exp $

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-screensaver-2.24.1-r1:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-screensaver-2.24.1-r1.ebuild:
  Stable on sparc, bug #260063

  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing compnerd as a maintainer since he was retired.

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-screensaver-2.24.1-r1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-screensaver-2.24.1-r1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-screensaver-2.24.1-r1.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-screensaver-2.24.1-r1.ebuild:
  Marking gnome-screensaver-2.24.1-r1 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-screensaver-2.24.1-r1.ebuild:
  Marking gnome-screensaver-2.24.1-r1 ppc64 stable for bug 260063

*gnome-screensaver-2.24.1-r1 (29 Jan 2009)

  29 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gnome-screensaver-2.24.1-pixmap-leak.patch,
  -gnome-screensaver-2.24.0.ebuild, +gnome-screensaver-2.24.1-r1.ebuild:
  Bump to 2.24.1-r1. Fix pixmap leak, bug #253581.

  30 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnome-screensaver-CVE-2008-0887.patch,
  -gnome-screensaver-2.20.0-r3.ebuild, gnome-screensaver-2.22.2.ebuild,
  gnome-screensaver-2.24.0.ebuild, gnome-screensaver-2.24.1.ebuild:
  Update xscreensaver test, bug #237897. Clean up old revisions.

*gnome-screensaver-2.24.1 (13 Nov 2008)

  13 Nov 2008; Daniel Gryniewicz <dang@gentoo.org>
  +gnome-screensaver-2.24.1.ebuild: