@@ -1,28 +1,28 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-screensaver/gnome-screensaver-2.22.2.ebuild,v 1.9 2008/11/30 12:10:01 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-screensaver/gnome-screensaver-2.26.1.ebuild,v 1.1 2009/05/11 22:59:46 eva Exp $
 
-inherit eutils gnome2
+inherit eutils gnome2 multilib
 
 DESCRIPTION="Replaces xscreensaver, integrating with the desktop."
 HOMEPAGE="http://live.gnome.org/GnomeScreensaver"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 KERNEL_IUSE="kernel_linux"
-IUSE="debug doc libnotify opengl pam xinerama $KERNEL_IUSE"
+IUSE="debug doc libnotify opengl pam $KERNEL_IUSE"
 
 RDEPEND=">=gnome-base/gconf-2.6.1
-	>=x11-libs/gtk+-2.11.5
+	>=x11-libs/gtk+-2.14.0
 	>=gnome-base/libglade-2.5.0
+	>=gnome-base/gnome-desktop-2.23.2
 	>=gnome-base/gnome-menus-2.12
 	>=dev-libs/glib-2.15
 	>=gnome-base/libgnomekbd-0.1
 	>=dev-libs/dbus-glib-0.71
 	libnotify? ( x11-libs/libnotify )
-	opengl?	( virtual/opengl )
-	xinerama? ( x11-libs/libXinerama )
+	opengl? ( virtual/opengl )
 	pam? ( virtual/pam )
 	!pam? ( kernel_linux? ( sys-apps/shadow ) )
 	x11-libs/libX11
@@ -32,19 +32,16 @@ RDEPEND=">=gnome-base/gconf-2.6.1
 	x11-libs/libXxf86misc
 	x11-libs/libXxf86vm"
 DEPEND="${RDEPEND}
-	sys-devel/gettext
 	>=dev-util/pkgconfig-0.9
-	>=dev-util/intltool-0.35
+	>=dev-util/intltool-0.40
 	doc? (
 		app-text/xmlto
 		~app-text/docbook-xml-dtd-4.1.2
-		~app-text/docbook-xml-dtd-4.4
-	)
+		~app-text/docbook-xml-dtd-4.4 )
 	x11-proto/xextproto
 	x11-proto/randrproto
 	x11-proto/scrnsaverproto
-	x11-proto/xf86miscproto
-	xinerama? ( x11-proto/xineramaproto )"
+	x11-proto/xf86miscproto"
 
 DOCS="AUTHORS ChangeLog HACKING NEWS README TODO"
 
@@ -55,23 +52,11 @@ pkg_setup() {
 		$(use_with libnotify)
 		$(use_with opengl libgl)
 		$(use_enable pam)
-		$(use_enable xinerama)
 		--enable-locking
 		--with-xf86gamma-ext
 		--with-kbd-layout-indicator
-		--with-gdm-config=/usr/share/gdm/defaults.conf
 		--with-xscreensaverdir=/usr/share/xscreensaver/config
-		--with-xscreensaverhackdir=/usr/lib/misc/xscreensaver"
-}
-
-src_unpack() {
-	gnome2_src_unpack
-
-	# fix bug #201019
-	epatch "${FILESDIR}/${PN}-2.20.0-fix-gamma.patch"
-
-	# Fix compatibility with gtk+-2.14
-	epatch "${FILESDIR}/${P}-fix-copy-themes-include.patch"
+		--with-xscreensaverhackdir=/usr/$(get_libdir)/misc/xscreensaver"
 }
 
 src_install() {
@@ -85,7 +70,7 @@ src_install() {
 	sed -e "s:\${PF}:${PF}:" \
 		< "${FILESDIR}/xss-conversion-2.txt" > "${S}/xss-conversion.txt"
 
-	dodoc "${S}"/xss-conversion.txt
+	dodoc "${S}/xss-conversion.txt"
 
 	# Non PAM users will need this suid to read the password hashes.
 	# OpenPAM users will probably need this too when
@@ -99,13 +84,21 @@ src_install() {
 pkg_postinst() {
 	gnome2_pkg_postinst
 
+	if has_version "<x11-base/xorg-server-1.5.3-r4" ; then
+		ewarn "You have a too old xorg-server installation. This will cause"
+		ewarn "gnome-screensaver to eat up your CPU. Please consider upgrading."
+		echo
+	fi
+
 	if has_version "<x11-misc/xscreensaver-4.22-r2" ; then
 		ewarn "You have xscreensaver installed, you probably want to disable it."
-		ewarn "To prevent a duplicate Screensaver entry in the menu, you need to"
+		ewarn "To prevent a duplicate screensaver entry in the menu, you need to"
 		ewarn "build xscreensaver with -gnome in the USE flags."
 		ewarn "echo \"x11-misc/xscreensaver -gnome\" >> /etc/portage/package.use"
+
+		echo
 	fi
-	echo
+
 	elog "Information for converting screensavers is located in "
 	elog "/usr/share/doc/${PF}/xss-conversion.txt.${PORTAGE_COMPRESS}"
 }
